test/ill-formed/multi-file/self_import/main.py
from main import x
print(x)
